--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ SET(CMAKE_CXX_STANDARD 14)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_CXX_EXTENSIONS OFF)
 
+set(STACK_PROTECTOR_SUPPORTED 0 CACHE BOOL "")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-protector")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector")
+
 include("${PROJECT_SOURCE_DIR}/LoadExternalDependencies.cmake")
 
 SET(APP_NAME main)
